# travel-assistant-bot

./: .gitignore  pyproject.toml
src/database/: __init__.py  fetch_db.py  inspect_db.py  travel2.sqlite
src/tools/: cars.py  excursions.py  flights.py  hotels.py  policies.py  utils.py
src/travel_assistant_bot/: __init__.py  agent.py  state.py  test.ipynb  workflow.py
